manifiesto/objects/Plazos_por_Etapa__c.object
<CustomObject>
    <description>Determina plazos para las etapas del caso tipo Reclamos</description>
    <fields>
        <fullName>Caso__c</fullName>
        <label>Caso</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Plazos por Etapa</relationshipLabel>
        <relationshipName>Plazos_por_Etapa</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>D_as_Transcurridos_numero__c</fullName>
        <description>Este campo esta hecho de manera auxiliar</description>
        <label>Días Transcurridos número</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>D_as_Trasnscurridos__c</fullName>
        <formula>IF(ISNULL(  Fecha_de_Termino__c  ), TODAY() -  Fecha_de_Inicio__c  , Fecha_de_Termino__c -  Fecha_de_Inicio__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Días Trasnscurridos</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Fecha_de_Inicio__c</fullName>
        <label>Fecha de Inicio</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fecha_de_Termino__c</fullName>
        <label>Fecha de Termino</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Indicador_Etapa__c</fullName>
        <formula>IF(
  OR (
       AND(  D_as_Trasnscurridos__c &lt;= 3),
       AND ( D_as_Trasnscurridos__c  &gt; 15, D_as_Trasnscurridos__c &lt;= 30,  Name = &quot;Investigación&quot;)),

      IMAGE(&quot;https://oxiquim--sbx2021--c.visualforce.com/resource/1626119141000/Verde&quot;,&quot;VERDE&quot;,30,30),
     
      IMAGE(&quot;https://oxiquim--sbx2021--c.visualforce.com/resource/1626119157000/Rojo?&quot;,&quot;ROJO&quot;,30,30))</formula>
        <label>Indicador Etapa</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Responsable__c</fullName>
        <formula>Caso__r.Owner:User.FirstName &amp;&quot; &quot;&amp;  Caso__r.Owner:User.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Responsable</label>
        <type>Text</type>
    </fields>
    <label>Plazo por Etapa</label>
    <nameField>
        <label>Nombre del Plazos por Etapa</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Plazos por Etapa</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>